# parallelProgramming

./: .gitignore  CMakeLists.txt
src/: laboratory_work1.h  laboratory_work2.h  main.cpp
src/lab2/: mpi-collective.h  mpi-point-to-point.h  openmp.h  utils.h
